attempting to fix the sidebar overlapping the footer

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -37,6 +37,7 @@ nav {
     width: 215px;
     position: fixed;
     left: 0;
+    bottom: 75px;
 }
 
 footer {
